# ufosigma

./: .clang-format  CMakeLists.txt
.github/workflows/: ci.yml  start-jedi-ci.yaml
CI/meto/: CMakeLists.txt  build-and-test.sh
resources/: CMakeLists.txt
resources/namemap/: test_name_map.yaml
resources/rmatrix/gnssro/: gnssro_ref_rmatrix_latitude.nl
src/mains/: CMakeLists.txt  ObsErrorWithinGroupCovDiags.h  RunPreProcess.h  ufoRunPreProcess.cc
src/ufo/: CMakeLists.txt  GeoVaLs.cc  GeoVaLs.interface.F90  ObsBias.cc  ObsBias.h  ObsBiasCovariance.cc  ObsBiasCovariance.h  ObsFilters.cc  ObsFilters.h  instantiateObsFilterFactory.h  ufo_constants_mod.F90  ufo_geovals_mod.F90  ufo_variables_mod.F90
src/ufo/errors/: CMakeLists.txt  ObsErrorCrossVarCov.cc  ObsErrorCrossVarCov.h  ObsErrorDiagonal.cc  ObsErrorDiagonal.h  ObsErrorParametersBase.h  ObsErrorReconditioner.cc  ObsErrorReconditioner.h  ObsErrorWithinGroupCov.cc  ObsErrorWithinGroupCov.h
src/ufo/filters/: AcceptList.cc  AverageObsToGeoValLevels.cc  AverageObsToGeoValLevels.h  BackgroundCheck.cc  BackgroundCheck.h  BayesianBackgroundCheck.cc  BayesianBackgroundQCFlags.cc  BayesianBackgroundQCFlags.h  BlackList.cc  CMakeLists.txt  ConventionalProfileProcessing.cc  ConventionalProfileProcessing.h  CopyFlagsFromExtendedToOriginalSpace.cc  CreateDiagnosticFlags.cc  DifferenceCheck.cc  EnsembleStatistics.cc  (+62 more)
test/: CMakeLists.txt
test/mains/: TestEnsembleObsFilters.cc
test/testinput/: geovals.yaml
test/ufo/: ConventionalProfileProcessing.h  ObsBias.h  ObsFilters.h  Reconditioning.h
tools/: cpplint.py
(+555 files in other folders)
